--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
+
+@theme {
+  --font-montserrat: "Montserrat", sans-serif;
+}
 
 @custom-variant dark (&:is(.dark *));
 
